Fixed align issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -518,6 +518,9 @@ section {
 
 
 /* Layout */
+.flex-d {
+  display: flex;
+}
 
 .flex-d-row {
   display: flex;
